# aira-IoT

./: .gitignore  .gitmodules  README.md  build.sh
Ethereum smart contracts/: ROS.sol  gps-destination.sol  ros.sol
Ethereum smart contracts/example/: gps-destination.sol  gripper.sol  motherbase.sol  pubsub.sol  simple_publisher.sol
ROS/aira_iot/: CMakeLists.txt  package.xml
ROS/aira_iot/patches/: Firmware_catkin_make_fix.patch
ROS/aira_iot/scripts/: aira_quad.py  client.js  create_contract.js  dron.js  geth_event.py  gps_contract.js  gps_contract_abi.js  gps_create.js  gps_listener.js  mission_planner.py  quad_commander.py  simple_mission.py
ROS/aira_iot/tools/: jmavsim_run.sh  mavlink_build_ws.sh
ROS/aira_iot/wiki/: Mission.md  Simulation.md
ROS/aira_ros_bridge/: README.md  index.js  package.json  start.js
ROS/aira_ros_bridge/lib/: abi.js  aira_bridge.js  rosmsg.js
ROS/aira_ros_messages/: CMakeLists.txt  package.xml  setup.py
ROS/aira_ros_messages/cmake/: gensol-extras.cmake.em
ROS/aira_ros_messages/scripts/: CMakeLists.txt  gen_sol.py  msg.sol.template
ROS/dron_common_msgs/: CMakeLists.txt  package.xml
ROS/dron_common_msgs/msg/: LocalRouteRequest.msg  LocalRouteResponse.msg  PathEstimate.msg  RouteRequest.msg  RouteResponse.msg
ROS/dron_employee/: CMakeLists.txt  README.md  package.xml
ROS/dron_employee/msg/: NavSat.msg  Target.msg  Wireless.msg
ROS/dron_ros_tutorial/: CMakeLists.txt  package.xml
ROS/dron_ros_tutorial/doc/: Simulation.md  Tutorial.md
ROS/small_atc/: CMakeLists.txt  package.xml
ROS/small_atc_dron/: CMakeLists.txt  package.xml
contracts/: RobotLiability.sol
contracts/example/: gps-destination.sol  gripper.sol  motherbase.sol  pubsub.sol  simple_publisher.sol
docker/agent/: Dockerfile  agent.py  docker-compose.yaml
docker/market/: Dockerfile  market.js
docker/market-switch/: README.md  docker-compose.yaml  gpio-monitor.py  market-switch.cabal  stack.yaml
docker/market-switch/abi/: Market.json
docker/market-switch/app/: Main.hs
docker/share-state-liability/: Dockerfile  docker-compose.yaml  docker-entrypoint.sh  listen-market.js  run-liability.sh
src/dron_ros_tutorial/: package.xml
src/robot_liability/: CMakeLists.txt  package.xml
(+47 files in other folders)
