name:                market-switch
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/airalab/aira-iot
license:             BSD3
license-file:        LICENSE
author:              Alexander Krupenkin
maintainer:          mail@akru.me
copyright:           (c) Alexander Krupenkin
category:            Aira 
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable market-switch
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, web3
  default-language:    Haskell2010
